fix problem with animation on mobile

--- a/client/src/components/template/banner/style/slider.scss
+++ b/client/src/components/template/banner/style/slider.scss
@@ -3,10 +3,9 @@
 .slider {
   display: flex;
   overflow: hidden;
-
   position: relative;
   width: 100%;
-  height: 400px;
+  height: 350px;
 }
 @keyframes scale {
   from {
